--- a/index.html
+++ b/index.html
@@ -10,6 +10,37 @@
     <title>Portal Notícias</title>
 </head>
 <body>
-    <a href="#">links</a>
+    <div id="app">
+        <header class="container">
+            <nav id="primary">
+                <div>
+                    <img src="assets/icons/List.svg" alt="">
+                    <strong>Menu</strong>
+                </div>
+
+                <div>
+                    <img src="assets/Logo.svg" alt="Tech News logo">
+                </div>
+
+                <div>
+                    <strong>Buscar</strong>
+                    <img src="assets/icons/MagnifyingGlass.svg" alt="">
+                </div>
+            </nav>
+
+            <nav id="secondary" class=" grid grid-flow-col">
+                <ul>
+                    <li><a href="#">Inteligência Artificial</a></li>
+                    <li><a href="#">Blockchain</a></li>
+                    <li><a href="#">Hologramas</a></li>
+                    <li><a href="#">Internet</a></li>
+                    <li><a href="#">Vestíveis</a></li>
+                    <li><a href="#">Realidade Aumentada</a></li>
+                    <li><a href="#">Realidade Virtual</a></li>
+                </ul>
+            </nav>
+        </header>
+
+    </div>
 </body>
 </html>
