--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <title>Portal Notícias</title>
 </head>
 <body>
-    <div id="app">
-        <header class="container">
-            <nav id="primary">
+        <header id="container" class="">
+            <nav id="primary" class="grid grid-flow-col">
                 <div>
                     <img src="assets/icons/List.svg" alt="">
                     <strong>Menu</strong>
@@ -28,19 +27,39 @@
                 </div>
             </nav>
 
-            <nav id="secondary" class=" grid grid-flow-col">
-                <ul>
-                    <li><a href="#">Inteligência Artificial</a></li>
-                    <li><a href="#">Blockchain</a></li>
-                    <li><a href="#">Hologramas</a></li>
-                    <li><a href="#">Internet</a></li>
-                    <li><a href="#">Vestíveis</a></li>
-                    <li><a href="#">Realidade Aumentada</a></li>
-                    <li><a href="#">Realidade Virtual</a></li>
-                </ul>
+            <nav id="secondary" class="grid grid-flow-col">
+                    <a href="#">Inteligência Artificial</a>
+                    <a href="#">Blockchain</a>
+                    <a href="#">Hologramas</a></li>
+                    <a href="#">Internet</a>
+                    <a href="#">Vestíveis</a>   
+                    <a href="#">Realidade Aumentada</a> 
+                    <a href="#">Realidade Virtual</a>   
             </nav>
         </header>
 
-    </div>
+        <main class=" grid container">
+            <section id="featured" class="grid  grid-flow-col gap-16">
+                <div>
+                    <img src="assets/images/Image 01.png" alt="">
+                </div>
+
+                <div class="grid grid-cols-2 gap-16">
+                    <div>
+                        <img src="assets/images/Image 02.png" alt="">
+                    </div>
+                    <div>
+                        <img src="assets/images/Image 03.png" alt="">
+                    </div>
+                    <div>
+                        <img src="assets/images/Image 04.png" alt="">
+                    </div>
+                    <div>
+                        <img src="assets/images/Image 05.png" alt="">
+                    </div>
+                </div>
+            </section>
+        </main>
+
 </body>
 </html>
