resolvendo problema espaçamento.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Portal Notícias</title>
 </head>
 <body>
-        <header id="container" class="">
+        <header id="" class="container">
             <nav id="primary" class="grid grid-flow-col">
                 <div>
                     <img src="assets/icons/List.svg" alt="">
@@ -38,8 +38,8 @@
             </nav>
         </header>
 
-        <main class=" grid container">
-            <section id="featured" class="grid  grid-flow-col gap-16">
+        <main class="grid container">
+            <section id="featured" class="grid grid-flow-col gap-16">
                 <div>
                     <img src="assets/images/Image 01.png" alt="">
                 </div>
