--- a/index.html
+++ b/index.html
@@ -143,8 +143,87 @@
                         </p>
                     </figure>
                 </div>
+            </section>
+
+            <section id="ai">
+                <header>
+                    <h3>Destaques da inteligencia Artificial</h3>
+
+                    <a href="#" class="grid grid-flow-col">
+                        <strong>Ver tudo</strong>
+                        <span></span>
+                    </a>
+                </header>
+
+                <div class="grid gap-32">
+                    <article class="grid grid-flow-col gap-16">
+                        <div>
+                            <span class="content-tag">Inteligência Artificial</span>
+                            <h3 class="text-xl">Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos futuros com alta precisão.</h3>
+                            <p class="text-sm text-short ">Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão. Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até planejamento estratégico.</p>
+                        </div>
+                        <div>
+                            <img src="assets/images/Image 10.png" alt="">
+                        </div>
+
+                    </article>
+
+                    <article class="grid grid-flow-col gap-16">
+                        <div>
+                            <span class="content-tag">Inteligência Artificial</span>
+                            <h3 class="text-xl">Dispositivo portátil promete traduzir instantaneamente diferentes idiomas, facilitando a comunicação global.</h3>
+                            <p class="text-sm text-short ">p>
+                        </div>
+                        <div>
+                            <img src="assets/images/Image 10.png" alt="">
+                        </div>
+
+                    </article>
+
+                    <article class="grid grid-flow-col gap-16">
+                        <div>
+                            <span class="content-tag">Inteligência Artificial</span>
+                            <h3 class="text-xl">Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos futuros com alta precisão.</h3>
+                            <p class="text-sm text-short ">Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão. Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até planejamento estratégico.</p>
+                        </div>
+                        <div>
+                            <img src="assets/images/Image 10.png" alt="">
+                        </div>
+                    </article>
+
+                    <article class="grid grid-flow-col gap-16">
+                        <div>
+                            <span class="content-tag">Inteligência Artificial</span>
+                            <h3 class="text-xl">Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos futuros com alta precisão.</h3>
+                            <p class="text-sm text-short ">Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão. Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as implicações para diversas áreas, desde finanças até planejamento estratégico.</p>
+                        </div>
+                        <div>
+                            <img src="assets/images/Image 10.png" alt="">
+                        </div>
+                    </article>
+
+                </div>
 
             </section>
+
+            <div>
+                <div id="ads">
+                    <img src="" alt="">
+                </div>
+
+                <section id="more">
+                    <header>
+                        <h3>Viu Iisso aqui?</h3>
+    
+                        <a href="#" class="grid grid-flow-col">
+                            <strong>Ver tudo</strong>
+                            <span></span>
+                        </a>
+                    </header>
+
+                </section>
+            </div>
+            
 
 
         </main>
