--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
             <section id="more">
                 <header>
-                    <h3>Viu Iisso aqui?</h3>
+                    <h3>Viu isso aqui?</h3>
 
                     <a href="#" class="grid grid-flow-col">
                         <strong>Ver tudo</strong>
